# prodapi

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: codecov.yml
docs/: index.md
examples/app1/: README.md  app.py  db.py  routes.py  sec.py  settings.py
prodapi/: __init__.py  applications.py  info.py  sec.py
prodapi-cli/: .flake8  README.md  pyproject.toml
prodapi-cli/prodapi_cli/: __init__.py  constants.py  generator.py  info.py  main.py  settings.py  utils.py
prodapi-cli/prodapi_cli/{{project_slug}}/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
prodapi-cli/prodapi_cli/{{project_slug}}/docs/: index.md
prodapi-cli/prodapi_cli/{{project_slug}}/tests/integration/: test_routes.py
prodapi-cli/prodapi_cli/{{project_slug}}/tests/unit/: test_models.py
prodapi-cli/prodapi_cli/{{project_slug}}/{{project_slug_underscored}}/: README.md  app.py  auth.py  models.py  permissions.py  routes.py  settings.py
prodapi-cli/tests/: test_settings.py
prodapi/models/: misc.py
prodapi/routes/: __init__.py  health.py  user.py
search/: search_index.json
tests/examples/: test_app1.py
tests/integration/: test_app.py  test_health.py  test_info.py  test_user.py
