[tool.poetry]
name = "prodapi"
version = "0.1.0"
description = "A thin layer on top of FastAPI that adds some production readiness features."
authors = ["Jacob Magnusson <m@jacobian.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://jmagnusson.github.io/prodapi/"
repository = "https://github.com/jmagnusson/prodapi"
documentation = "https://jmagnusson.github.io/prodapi/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi-security = "^0.3.1"
orjson = "^3"
importlib_metadata = { version = "^3", python = "<3.8" }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.7.0"
mkdocs-material = "^7.0.6"
mypy = "^0.812"
pytest = "^6"
pytest-cov = "^2.11.1"
requests = "^2.25.1"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
