[tool.poetry]
name = "prodapi-cli"
version = "0.1.0"
description = "CLI for creating prodapi apps via the command line."
authors = ["Jacob Magnusson <m@jacobian.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://jmagnusson.github.io/prodapi/"
repository = "https://github.com/jmagnusson/prodapi"
documentation = "https://jmagnusson.github.io/prodapi/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[tool.poetry.scripts]
prodapi = 'prodapi_cli:app'

[tool.poetry.dependencies]
python = "^3.6.1"
typer = {extras = ["all"], version = "^0.3.2"}
Jinja2 = "^2.11.3"
pydantic = {extras = ["email"], version = "^1.8.1"}
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.7.0"
mypy = "^0.812"
pytest = "^6"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
exclude = "{{project_slug}}"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
