[tool.poetry]
name = "{{ project_slug_underscored }}"
version = "0.1.0"
description = "{{ project_short_description }}"
authors = ["{{ full_name }} <{{ email }}>"]
license = "MIT"
readme = "README.md"
homepage = "{{ documentation_url }}"
repository = "{{ github_repo_url }}"
documentation = "{{ documentation_url }}"
classifiers = ["License :: Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.6"
prodapi = "^0.1"
pydantic = "^1.5"
uvicorn = "^0.13.4"
PyJWT = {version = "^2", extras = ["crypto"]}

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.2"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6"
pytest-cov = "^2.11.1"
requests = "^2.25.1"
mypy = "^0.812"
flake8 = "^3.9.0"
mkdocs-material = "^7.0.6"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[prodapi]
{{ settings.to_toml() | safe -}}
